@@ -1,4 +1,4 @@
-<!-- $Id: zoom.xml,v 1.12 2001-11-18 21:14:22 adam Exp $ -->
+<!-- $Id: zoom.xml,v 1.13 2001-11-22 09:45:31 adam Exp $ -->
  <chapter id="zoom"><title>Building clients with ZOOM</title>
   
   <para>
@@ -329,6 +329,11 @@
         databaseName</entry><entry>One or more database names
         separated by character plus (<literal>+</literal>).
        </entry><entry>Default</entry></row>
+      <row><entry>
+        setname</entry><entry>Name of Result Set (Result Set ID).
+        If this option isn't set, the ZOOM module will automatically
+        allocate a result set name.
+       </entry><entry>default</entry></row>
      </tbody>
     </tgroup>
    </table>
